--- a/src/pages/PageA/PageA.module.scss
+++ b/src/pages/PageA/PageA.module.scss
@@ -1,5 +1,5 @@
 .pagea {
-	background-color: #2c3e50;
+	background-color: #D0D7DF;
 	height: 500px;
 	align-items: center;
 	justify-content: center;
