Added static cards, changed Background-color

--- a/src/pages/Medications/Medications.module.scss
+++ b/src/pages/Medications/Medications.module.scss
@@ -1,5 +1,5 @@
 .medications {
-  background-color: #D0D7DF;
+  background-color: #e0e7eF;
   height: 500px;
   align-items: center;
   justify-content: center;
