Added class to meds array and CSS to medications

--- a/src/pages/Medications/Medications.module.scss
+++ b/src/pages/Medications/Medications.module.scss
@@ -6,3 +6,16 @@
   display: grid;
   color: #333;
 }
+
+.am-pm {
+  background-color: lightgreen;
+}
+.pm-only {
+  background-color: gold;
+}
+.am-only {
+  background-color: lightblue;
+}
+.as-needed {
+  background-color: #ddd;
+}
